--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "test": "mocha"
   },
   "dependencies": {
-    "yeoman-generator": "~0.13.0"
+    "yeoman-generator": "~0.13.0",
+    "chalk": "~0.2.1"
   },
   "devDependencies": {
     "mocha": "~1.12.0"
